--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 streamlit==1.30.0
 
 # Core libraries
-numpy==1.24.3
+numpy==1.26.0         # upgraded for Python 3.12 support :contentReference[oaicite:0]{index=0}
 pandas==2.0.3
 scipy==1.11.3
 pyyaml==6.0.1
@@ -20,15 +20,13 @@ lightgbm==4.1.0
 catboost==1.2.2
 
 # Deep learning
-tensorflow==2.15.0
-keras==2.15.0
+# (TensorFlow/Keras don’t yet publish wheels for Python 3.12 ⚠️)
+# tensorflow==2.15.0   ← no matching 3.12 wheel :contentReference[oaicite:1]{index=1}
+# keras==2.15.0
+
+# If you still need PyTorch, the CPU‑only wheel should work on 3.12:
 torch==2.2.0
 
 # Time series
 statsmodels==0.14.0
 prophet==1.1.5
-
-# Optional: extras for better compatibility (uncomment if needed)
-# tqdm==4.66.1          # for progress bars
-# joblib==1.3.2         # for model persistence
-# rich==13.7.0          # pretty CLI output for logs
